# fastapi_todo

./: README.md  pyproject.toml  steps.md
app_fastapi/: config.py  main.py  models.py  routes.py
database/: database.py
static/css/: style.css
templates/todo/: index.html
